# fp-projekt

./: .gitignore  README.md  server.cabal
presets/: simple.preset
src/: Client.hs  Common.hs  Field.hs  Game.hs  Prot.hs  Server.hs
