name:                   Server
version:                0.9
license:                BSD3
synopsis:               Serveritarkvara FPM projekti jaoks
author:                 Jaak Randmets
build-type:             Simple
cabal-version:          >= 1.2

Executable Server
    main-is:            Server.hs
    ghc-options:        -Wall
    hs-source-dirs:     src
    build-depends:      base, network, random, array, containers, mtl

Executable Client
    main-is:            Client.hs
    ghc-options:        -Wall
    hs-source-dirs:     src
    build-depends:      base, network
